--- a/force-app/main/default/classes/vy_DataSource.cls
+++ b/force-app/main/default/classes/vy_DataSource.cls
@@ -1,5 +1,14 @@
-public with sharing class vy_DataSource {
-    public vy_DataSource() {
+// Manages Data Sources defined by Formation, sent into Coordinator for Processing
 
+public with sharing class vy_DataSource {
+
+    private string soqlQuery;
+
+    public vy_DataSource ( String soqlQuery ) {
+        this.soqlQuery = soqlQuery;
+    }
+
+    public string generateQuery () {
+        return this.soqlQuery;
     }
 }
