--- a/force-app/main/default/classes/vy_Formation.cls
+++ b/force-app/main/default/classes/vy_Formation.cls
@@ -1,7 +1,10 @@
 // Interface to Custom Metadata "Formation" information
 
 public with sharing class vy_Formation {
-    public vy_Formation() {
 
+    public vy_DataSource dataSource;
+
+    public vy_Formation() {
+        vy_DataSource = new vy_DataSource ( null );
     }
 }
