--- a/force-app/main/default/classes/vy_Formation.cls
+++ b/force-app/main/default/classes/vy_Formation.cls
@@ -5,6 +5,6 @@ public with sharing class vy_Formation {
     public vy_DataSource dataSource;
 
     public vy_Formation() {
-        vy_DataSource = new vy_DataSource ( null );
+        this.dataSource = new vy_DataSource ( null );
     }
 }
