rough out formation

--- a/force-app/main/default/classes/vy_WorkFactory.cls
+++ b/force-app/main/default/classes/vy_WorkFactory.cls
@@ -1,5 +1,10 @@
 public with sharing class vy_WorkFactory {
-    public vy_WorkFactory() {
 
+    public vy_WorkFactory ( vy_Formation formation, List < sObject > data ) {
+
+    }
+
+    public void execute () {
+        
     }
 }
