--- a/force-app/main/default/classes/vy_Coordinator.cls
+++ b/force-app/main/default/classes/vy_Coordinator.cls
@@ -3,8 +3,10 @@
 
 global with sharing class vy_Coordinator implements Database.Batchable < sobject >, Database.Stateful {
 
-    global vy_Coordinator() {
+    private vy_Formation formation;
 
+    global vy_Coordinator ( vy_Formation formation ) {
+        this.formation = formation;
     }
 
     global Database.QueryLocator start ( Database.BatchableContext batchContext ) {
@@ -13,6 +15,9 @@ global with sharing class vy_Coordinator implements Database.Batchable < sobject
 	}
 
 	global void execute ( Database.BatchableContext batchContext, List < sObject > listToProcess ) {
+
+        vy_WorkFactory workFactory = new vy_WorkFactory ( this.formation, listToProcess );
+        workFactory.execute ();
 
 	}
 
