--- a/force-app/main/default/classes/vy_Formation.cls
+++ b/force-app/main/default/classes/vy_Formation.cls
@@ -1,10 +1,10 @@
 // Interface to Custom Metadata "Formation" information
 
-public with sharing class vy_Formation {
+global with sharing class vy_Formation {
 
-    public vy_DataSource dataSource;
+    private vy_DataSource dataSource;
 
-    public vy_Formation() {
+    global vy_Formation() {
         this.dataSource = new vy_DataSource ( null );
     }
 }
