--- a/force-app/main/default/classes/vy_CoordinatorFactory.cls
+++ b/force-app/main/default/classes/vy_CoordinatorFactory.cls
@@ -1,5 +1,10 @@
-public with sharing class vy_CoordinatorFactory {
-    public vy_CoordinatorFactory() {
+global with sharing class vy_CoordinatorFactory {
+
+    vy_Formation formation;
+
+    global vy_CoordinatorFactory ( ) {
 
     }
+
+
 }
