big change to chain formations vs. schedule

--- a/force-app/main/default/classes/vy_Coordinator.cls
+++ b/force-app/main/default/classes/vy_Coordinator.cls
@@ -47,28 +47,6 @@ global with sharing class vy_Coordinator {
         upsert vl;
     }
 
-    // interface to setup the day's schedule based on a formation
-    global void scheduleFormation ( vy_Formation formation ) {
-        // build the schedule 
-        Date today = formation.getScheduledDate ();
-        String year = String.valueOf ( today.year () );
-        String month = String.valueOf ( today.month () );
-        String day = String.valueOf ( today.day () );
-
-        for ( String hour : formation.getScheduledHours ()) {
-            string scheduleCronExp = '0 0 ' + hour + ' ' + day + ' ' + month + ' ? ' + year;
-            string scheduleLabel = 'VY-' + formation.getName () + '[' + hour + ']';
-            
-            System.debug ( 'scheduleFormation - cron label ' + scheduleLabel );
-            System.debug ( 'scheduleFormation - formation ' + formation );
-            System.debug ( 'scheduleFormation - cron exp ' + scheduleCronExp );
-            
-            string jobId = System.schedule ( scheduleLabel, scheduleCronExp, new vy_Schedulable ( formation ) ); 
-
-            writeLogEntryScheduled ( jobId );
-        }
-    }
-
     private static List < vyuha_log__c > fetchLogEntry ( ID apexJobId ) {
         return new List < vyuha_log__c > ([ SELECT ID, Status__c FROM vyuha_log__c WHERE Apex_Job_ID__c = : apexJobId FOR UPDATE ]);
     }
@@ -81,6 +59,51 @@ global with sharing class vy_Coordinator {
         } else {
             return null;
         }
+    }
+
+    global static vy_Formation getNextFormation ( vy_Formation currentFormation ) {
+
+        List < Vyuha_Formation__mdt > formations;
+
+        if ( Test.isRunningTest() ) {
+            formations = [ SELECT DeveloperName FROM Vyuha_Formation_mdt WHERE Is_Test__c = TRUE ORDER BY Order__c ];
+        } else {
+            formations = [ SELECT DeveloperName FROM Vyuha_Formation_mdt WHERE Active__c = TRUE AND Is_Test__c = FALSE ORDER BY Order__c ];
+        }
+
+        if ( formations.size () == 0 ) {
+            // no formations to run, return null
+            return null;
+        }
+
+        string nextFormationName = '';
+
+        if ( currentFormation.getName () == null ) {
+            // this is an empty Formation, just return the first record
+            nextFormationName = formations[0].DeveloperName;
+        } else {
+            boolean foundCurrent = false;
+            for ( Vyuha_Formation__mdt formation : formations ) {
+                if ( foundCurrent ) {
+                    nextFormationName = formation.DeveloperName;
+                    break;
+                }
+                if ( formation.DeveloperName == currentFormation.getName () ) {
+                    foundCurrent = true;
+                }
+            }
+        }
+
+        if ( nextFormationName == '' ) {
+            // we were at the last one already - nothing left, return null
+            return null;
+        }
+
+        // load the formation and return
+        vy_Formation returnFormation = new vy_Formation ();
+        returnFormation.load ( nextFormationName );
+        return returnFormation;
+
     }
 
 }
