--- a/force-app/main/default/classes/vy_Formation.cls
+++ b/force-app/main/default/classes/vy_Formation.cls
@@ -7,14 +7,12 @@ global with sharing class vy_Formation {
     global String flowInterviewName;
     global Boolean isValid;
     global Integer batchSize;
-    global Set < string > scheduledHours;
 
     global vy_Formation () {
         this.soqlStatement = '';
         this.flowInterviewName = '';
         isValid = false;
         name = '';
-        this.scheduledHours = new Set < string > ();
         system.debug ('vy_Formation.constructor () ' + this );
     }
 
@@ -26,9 +24,6 @@ global with sharing class vy_Formation {
         fields.add ( 'Active__c' );
         fields.add ( 'Batch_Size__c' );
         fields.add ( 'Soql_Statement__c' );
-        for ( integer i = 1; i <= 23; i++ ) {
-            fields.add ( 'Hour_' + String.valueOf ( i ) + '__c' );
-        }
 
         // build soql statement
         string soql = 'SELECT ';
@@ -57,12 +52,18 @@ global with sharing class vy_Formation {
         this.batchSize = Integer.valueOf ( (decimal) formationRecords[0].get ( 'Batch_Size__c' ));
         this.soqlStatement = (string) formationRecords[0].get ( 'Soql_Statement__c' );
         this.isValid = true;
-        for ( integer i = 1; i <= 23; i++ ) {
-            if ( (boolean) formationRecords[0].get ( 'Hour_' + String.valueOf ( i ) + '__c' )) {
-                this.scheduledHours.add ( String.valueOf ( i ));
-            }
-        }
+        
         return true;
+    }
+
+    // launches a formation as a batch job
+    global string launch () {
+        if ( this.isValid ) {
+            vy_Processor processor = new vy_Processor ( this, new vy_Coordinator ());
+            return Database.executeBatch ( processor, this.batchSize );
+        } else {
+            // formation is not valid - do nothing
+        }
     }
 
     global string getName () {
@@ -79,73 +80,6 @@ global with sharing class vy_Formation {
 
     global integer getBatchSize () {
         return this.batchSize;
-    }
-
-    global Set < string > getScheduledHours () {
-        return this.scheduledHours;
-    }
-
-    // checks formation definition against current time and determines next Run Time
-    global DateTime getNextRunDateTime () {
-        return null;
-    }
-
-    global List < vy_Formation > getActiveFormations () {
-
-        List < vy_Formation > returnList = new List < vy_Formation > ();
-
-        // get list of all actives
-        List < vyuha_formation__mdt > formationRecords = Database.Query ( 'SELECT DeveloperName FROM vyuha_formation__mdt WHERE Active__c = TRUE' );
-        for ( vyuha_formation__mdt formationRecord : formationRecords ) {
-            vy_Formation newFormation = new vy_Formation ();
-            newFormation.load ( (string) formationRecord.get ( 'DeveloperName' ));
-            returnList.add ( newFormation );
-        }
-        return returnList;
-    }
-
-    global vy_Formation getNextFormation () {
-
-        List < Vyuha_Formation__mdt > formations;
-
-        if ( Test.isRunningTest() ) {
-            formations = [ SELECT DeveloperName FROM Vyuha_Formation_mdt WHERE Is_Test__c = TRUE ORDER BY Order__c ];
-        } else {
-            formations = [ SELECT DeveloperName FROM Vyuha_Formation_mdt WHERE Active__c = TRUE AND Is_Test__c = FALSE ORDER BY Order__c ];
-        }
-
-        if ( formations.size () == 0 ) {
-            // no formations to run, return null
-            return null;
-        }
-
-        string nextFormationName = '';
-
-        if ( this.name == null ) {
-            // this is an empty Formation, just return the first record
-            nextFormationName = formations[0].DeveloperName;
-        } else {
-            boolean foundCurrent = false;
-            for ( Vyuha_Formation__mdt formation : formations ) {
-                if ( foundCurrent ) {
-                    nextFormationName = formation.DeveloperName;
-                    break;
-                }
-                if ( formation.DeveloperName == this.name ) {
-                    foundCurrent = true;
-                }
-            }
-        }
-
-        if ( nextFormationName == '' ) {
-            // we were at the last one already - nothing left, return null
-            return null;
-        }
-
-        // load the formation and return
-        vy_Formation returnFormation = new vy_Formation ();
-        returnFormation.load ( nextFormationName );
-        return returnFormation;
     }
 
     global Boolean executeFlow ( List < sObject > recordsToProcess ) {
@@ -169,11 +103,6 @@ global with sharing class vy_Formation {
         jobFlow.start ();
 
         return true; // return false if execute fails
-    }
-
-    global Date getScheduledDate () {
-        // default to today
-        return Date.today ();
     }
 
 }
